--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Pollo Loco - Jump'n Run</title>
     <link rel="stylesheet" href="style.css">
 <script src="game.js"></script>
+<script src="gameover.js"></script>
+<script src="titlescreen.js"></script>
 
 </head>
 <body onload="init()">
