--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
     <!--button after gameover-->
     <div id="tryagainbutton" class="btn-tryagain d-none zminus10" ><p><a href="index.html"> BACK TO MAIN MENU</a></p></div>
 
-    <!--button at game start-->
+    <div class="buttoncotainer" id="buttoncotainer">
+    <!--start button at game start-->
     <div id="startbutton" class="btn-start" onclick="startnewgame()"><p> START NEW GAME</p></div>
-     
+
+        <!-- help button at game start-->
+        <div id="helpbutton" class="btn-help" onclick="openhelp()"><p> INSTRUCTIONS</p></div>
+    </div>
+
     <!--header-->
     <h2 class="header1">EL POLLO LOCO</h2>
 
     <!--Canvas game screen-->
-<canvas id="canvas" width="720" height="480">
-</canvas>        
+<canvas class="canvas-style" id="canvas" width="720" height="480">
+</canvas>  
+
+<!--control explanation bottom-->
+<div class="controls-container"> 
+    <div class="controls-row-element"> <img src="./img/howto/arrow-91-128.png" alt=""><div>Move Left</div></div> 
+    <div class="controls-row-element"> <img src="./img/howto/arrow-27-128.png" alt=""><div>Move Right</div></div>
+    <div class="controls-row-element"> <img src="./img/howto/space-4-128.png" alt=""><div>Jump</div></div>
+    <div class="controls-row-element"> <img src="./img/howto/b-throw.png" alt=""><div>Throw Bottle</div></div>
+    
+</div>
 
 </body>
 </html>
