boss animation cycle fix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!--control explanation bottom-->
 <div class="controls-container"> 
-    <div class="controls-row-element"> <img src="./img/howto/arrow-91-128.png" alt=""><div>Move Left</div></div> 
+    <div class="controls-row-element"> <img src="./img/howto/arrow-91-128.png" alt="" onclick="moveLeftClick()"><div>Move Left</div></div> 
     <div class="controls-row-element"> <img src="./img/howto/arrow-27-128.png" alt=""><div>Move Right</div></div>
     <div class="controls-row-element"> <img src="./img/howto/space-4-128.png" alt=""><div>Jump</div></div>
     <div class="controls-row-element"> <img src="./img/howto/b-throw.png" alt=""><div>Throw Bottle</div></div>
