--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 
     </div>
 
+    <!--disclaimer + copyright-->
+    <div class="footer">
+        <div class="footer-row">
+            <div class="footer-element"><a href=""> Copyright 2021</a> </div>
+            <div class="footer-seperator">| </div>
+            <div class="footer-element"><a href="">Impressum</a> </div>
+        </div>
+    </div>
 </body>
 
 </html>
