style help updated

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="footer-row">
             <div class="footer-element"><a href=""> Copyright 2021</a> </div>
             <div class="footer-seperator">| </div>
-            <div class="footer-element"><a href="">Impressum</a> </div>
+            <div class="footer-element"><a href="impressum.html">Impressum</a> </div>
         </div>
     </div>
 </body>
