--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Pollo Loco - Jump'n Run</title>
     <link rel="stylesheet" href="style.css">
+    <script src="preload.js"></script>
     <script src="game.js"></script>
     <script src="gameover.js"></script>
     <script src="startscreen.js"></script>
